k8s/gcp-gateway-api/gateway-api-shared-svcs.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway-api
  namespace: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
  - type: NamedAddress
    value: gke-aib-plus-shared-services-ip  # change it
  listeners:

  - name: https
    protocol: HTTPS
    port: 443
    hostname: "argocd.dev.plus.aib.vodafone.com" # change it
    tls:
      mode: Terminate
      certificateRefs: # created the secret and stored files locally for now until the external secrets component is implemented
      - kind: Secret
        name: argocd.dev.plus.aib.vodafone.com
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: gateway
spec:
  parentRefs:
  - name: external-gateway-api
    sectionName: https
  hostnames:
  - "argocd.dev.plus.aib.vodafone.com" # change it base on cluster
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gateway
  to:
  - group: ""
    kind: Service
